# ws-rs-no-connection-repro

./: Cargo.toml  README.md
src/: main.rs
