[package]
name = "test_ws"
version = "0.1.0"
authors = ["Kallyn Gowdy <kallyngowdy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1.1"
openssl = "0.10"
openssl-sys = "0.9"
ws = { version = "0.9", features = ["ssl"] }
env_logger = "0.7.1"